--- a/stylesheets/csveed.css
+++ b/stylesheets/csveed.css
@@ -24,7 +24,36 @@
     margin-bottom: 0px;
 }
 
+.site-link-sub2 {
+    font-family: 'Architects Daughter','Helvetica Neue',Helvetica,Arial,serif;
+    font-size: 16px;
+    font-weight: normal;
+    letter-spacing: 0;
+    line-height: 1.3;
+    margin-left: 20px;
+    margin-bottom: 0px;
+}
+
 hr {
     border-bottom:1px dashed #2879D0;
     margin-bottom: 10px;
+}
+
+.comparison-matrix {
+    width: 150%;
+}
+
+.comparison-matrix .property {
+    text-align: left;
+    font-weight: bold;
+}
+
+.comparison-matrix .library {
+    text-align: center;
+    font-weight: bold;
+    width: 11%;
+}
+
+.comparison-matrix .appraisal {
+    text-align: center;
 }
